<resources>
    <string name="app_name">My Notes</string>
    <string name="my_notes">My Notes</string>
    <string name="search_notes">Search notes</string>
    <string name="note_title">Title</string>
    <string name="note_subtitle">Subtitle</string>
    <string name="type_note_here">Type something here…</string>
    <string name="pick_color">Pick Color</string>
    <string name="add_image">Add Image</string>
    <string name="miscelleanous">miscellaneous</string>
    <string name="add_url">Add URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="add">ADD</string>
    <string name="cancel_dialog">CANCEL</string>
    <string name="swipe_up">swipe up</string>
    <string name="swipe_for_more">Swipe for More</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="date_dialog">Date</string>
    <string name="time">Time</string>
    <string name="save">Save</string>
    <string name="notes_app">My Notes</string>
    <string name="today" />
    <string name="task__name" />
    <string name="task_name">Task Name</string>
    <string name="add_new_task">Add New Task</string>
    <string name="add_task_reminder">Add Task Reminder</string>
    <string name="enter_task">Enter Task</string>
    <string name="snooze_off">Snooze Off</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="time_">Time</string>
    <string name="date_">Date</string>
</resources>