<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    app:cardElevation="5dp"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@drawable/rounded_corner"
        android:orientation="vertical">


        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="20sp"
            android:textStyle="italic"
            android:textColor="@color/colorWhite"/>


        <TextView
            android:id="@+id/txtTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="italic" />

    </LinearLayout>


</androidx.cardview.widget.CardView>