<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/newBackground"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/textMyNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:fontFamily="@font/manrope_extrabold"
        android:includeFontPadding="false"
        android:text="@string/my_notes"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/layoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/rounded_corner"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/textMyNotes"
        tools:layout_editor_absoluteX="10dp">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_new_search"
            app:tint="@color/colorSearchIcon" />

        <EditText
            android:id="@+id/inputSearch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:background="@drawable/rounded_corner"
            android:fontFamily="@font/manrope_bold"
            android:hint="@string/search_notes"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="text"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorTextHint"
            android:textSize="@dimen/_13ssp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginEnd="@dimen/_2sdp"
        android:clipToPadding="false"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/_12sdp"
        android:paddingBottom="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@id/layoutQuickActions"
        app:layout_constraintTop_toBottomOf="@id/layoutSearch"/>

    <LinearLayout
        android:id="@+id/layoutQuickActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/addTask"
            android:layout_width="@dimen/_28sdp"
            android:layout_height="@dimen/_28sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_todolist" />
<!--        android:tint="@color/colorIcons"-->
        <ImageView
            android:id="@+id/imageAddReminder"
            android:layout_width="@dimen/_28sdp"
            android:layout_height="@dimen/_28sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_reminder"/>
<!--            android:tint="@color/colorIcons"-->

        <ImageView
            android:id="@+id/imageAddImage"
            android:layout_width="@dimen/_28sdp"
            android:layout_height="@dimen/_28sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_new_image" />
<!--        android:tint="@color/colorIcons"-->

        <ImageView
            android:id="@+id/imageAddWebLink"
            android:layout_width="@dimen/_28sdp"
            android:layout_height="@dimen/_28sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_new_weblink" />

        <ImageView
            android:id="@+id/imageAddNote"
            android:layout_width="@dimen/_28sdp"
            android:layout_height="@dimen/_28sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:contentDescription="@string/app_name"
            android:src="@color/newBlack"/>


    </LinearLayout>

    <ImageView
        android:id="@+id/imageAddNoteMain"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_new_large_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutSearch"
        app:layout_constraintVertical_bias="0.867" />


</androidx.constraintlayout.widget.ConstraintLayout>